--- a/public/profile.html
+++ b/public/profile.html
@@ -78,7 +78,7 @@
             <div class="col s3">
                 <div class="card horizontal">
                     <div class="card-image">
-                        <!-- <img src="./images/profile/AddAnImageOfYou.JPG"> -->
+                        <!-- <img src="./images/profile/image.png"> -->
                     </div>
                     <div class="col s9">
                         <div class="card-stacked">
