--- a/public/add.html
+++ b/public/add.html
@@ -147,7 +147,7 @@
           </div>
           <div class="card-stacked">
             <div class="card-content">
-              <p>What is your pet located?</p>
+              <p>Where is your pet located?</p>
               <div class="input-field col s12">
                 <textarea id="address" class="materialize-textarea"></textarea>
               </div>
