--- a/public/main.html
+++ b/public/main.html
@@ -95,7 +95,7 @@
             <i class="large material-icons">menu</i>
             </a>
             <ul>
-            <li class="waves-effect waves-light"><a href="main.html" class="tooltipped" data-position="top" data-delay="50" data-tooltip="Go Home"><i class="material-icons">home</i></a></li>
+            <li class="waves-effect waves-light"><a href="main.html" class="tooltipped" data-position="top" data-delay="50" data-tooltip="Home"><i class="material-icons">home</i></a></li>
             <li class="waves-effect waves-light"><a href="addother.html" class="tooltipped" data-position="top" data-delay="50" data-tooltip="Add a Pet"><i class="material-icons">add</i></a></li>
             <li class="waves-effect waves-light"><a href="resources.html" class="tooltipped" data-position="top" data-delay="50" data-tooltip="Resources"><i class="material-icons">format_list_bulleted</i></a></li>
             <li class="waves-effect waves-light"><a href="logout" class="tooltipped" data-position="top" data-delay="50" data-tooltip="Sign Out"><i class="material-icons">close</i></a></li>
