--- a/public/add.html
+++ b/public/add.html
@@ -133,7 +133,7 @@
               <p>When was your pet born?</p>
               <br>
               <br>
-              <input type="text" id="birthdate" class="datepicker">
+              <input type="text" id="birthdate PetAge" class="datepicker">
             </div>
           </div>
         </div>
@@ -149,7 +149,7 @@
             <div class="card-content">
               <p>Where is your pet located?</p>
               <div class="input-field col s12">
-                <textarea id="address" class="materialize-textarea"></textarea>
+                <textarea id="address PetLocation" class="materialize-textarea"></textarea>
               </div>
             </div>
           </div>
@@ -166,7 +166,7 @@
             <div class="card-content">
               <p>Who is your pet's veterinarian (include phone number and address)?</p>
               <div class="input-field col s12">
-                <textarea id="phone" class="materialize-textarea"></textarea>
+                <textarea id="phone vetAddress PetVet" class="materialize-textarea"></textarea>
               </div>
             </div>
           </div>
@@ -183,7 +183,7 @@
             <div class="card-content">
               <p>Does your pet take any medication? List it here.</p>
               <div class="input-field col s12">
-                <textarea id="height" class="materialize-textarea"></textarea>
+                <textarea id="meds PetMeds" class="materialize-textarea"></textarea>
               </div>
             </div>
           </div>
@@ -200,7 +200,7 @@
             <div class="card-content">
               <p>Does your pet require any special treatment or care considerations?</p>
               <div class="input-field col s12">
-                <textarea id="weight" class="materialize-textarea"></textarea>
+                <textarea id="temperament PetCare care" class="materialize-textarea"></textarea>
               </div>
             </div>
           </div>
