--- a/public/index.html
+++ b/public/index.html
@@ -96,8 +96,8 @@
                                                             <label for='password'>Enter your password</label>
                                                             </div>
                                                             <label style='float: right;'>
-                                                                            <a class='blue-text' href='#!'><b>Forgot Password?</b></a>
-                                                                        </label>
+                                                                <a class='blue-text' href='#!'><b>Forgot Password?</b></a>
+                                                            </label>
                                                         </div>
                                                     </form>
                                                 </div>
@@ -147,6 +147,18 @@
                                                                         <div class="input-field col s12">
                                                                             <input id="email1" type="email" class="validate">
                                                                             <label for="email">Email</label>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="row">
+                                                                        <div class="input-field col s12">
+                                                                            <input id="phone" type="text" class="validate">
+                                                                            <label for="phone">Phone Number</label>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="row">
+                                                                        <div class="input-field col s12">
+                                                                            <input id="address" type="text" class="validate">
+                                                                            <label for="address">Adress</label>
                                                                         </div>
                                                                     </div>
                                                                     <div class="row">
