--- a/public/add.html
+++ b/public/add.html
@@ -81,7 +81,7 @@
       <!-- Modal Structure -->
       <div id="add-modal" class="modal">
         <div class="modal-content">
-          <h4 align="center">Welcome to Pet-Cern</h4>
+          <h4 align="center">Add a pet to your Pet-Cern Profile.</h4>
 
           <h6>FMazim voluptatum at mei. Ei ius praesent constituam. Ad est putent vivendo consulatu. Id vitae everti sea, ea usu sint assentior democritum, est consul scripta nominavi at.
             <br>
@@ -89,9 +89,27 @@
 
         </div>
         <div class="modal-footer">
-          <a href="#!" class="modal-action modal-close waves-effect blue btn">Lorem</a>
+          <a href="#!" class="modal-action modal-close waves-effect blue btn">Add</a>
         </div>
       </div>
+
+     <!-- Main Card -->
+     <div class="col s12 s7">
+      <div class="card horizontal profile-pic grey lighten-5">
+        <div class="card-image">
+          <img src="./images/addform/petName.png">
+        </div>
+        <div class="card-stacked">
+          <div class="card-content">
+            <p>What is your pet's name?</p>
+            <div class="input-field col s12">
+              <textarea id="name petName" class="materialize-textarea"></textarea>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End  -->
 
       <!-- Main Card -->
       <div class="col s12 s7">
