--- a/public/add.html
+++ b/public/add.html
@@ -103,7 +103,7 @@
           <div class="card-content">
             <p>What is your pet's name?</p>
             <div class="input-field col s12">
-              <textarea id="name petName" class="materialize-textarea"></textarea>
+              <textarea id="name PetName" class="materialize-textarea"></textarea>
             </div>
           </div>
         </div>
