--- a/public/addother.html
+++ b/public/addother.html
@@ -103,7 +103,7 @@
           <div class="card-content">
             <p>What is your pet's name?</p>
             <div class="input-field col s12">
-              <textarea id="name petName" class="materialize-textarea"></textarea>
+              <textarea id="PetName" class="materialize-textarea"></textarea>
             </div>
           </div>
         </div>
@@ -128,7 +128,7 @@
                     <span>
                       <i class="material-icons">photo_camera</i>
                     </span>
-                    <input id="photo" type="file" accept="image/*"></input>
+                    <input id="PetPhoto" type="file" accept="image/*"></input>
                   </div>
                   <div class="file-path-wrapper">
                     <input class="file-path validate" type="text"></input>
@@ -151,7 +151,7 @@
               <p>When was your pet born?</p>
               <br>
               <br>
-              <input type="text" id="birthdate PetAge" class="datepicker">
+              <input type="text" id="PetAge" class="datepicker">
             </div>
           </div>
         </div>
@@ -167,7 +167,7 @@
             <div class="card-content">
               <p>Where is your pet located?</p>
               <div class="input-field col s12">
-                <textarea id="address PetLocation" class="materialize-textarea"></textarea>
+                <textarea id="PetLocation" class="materialize-textarea"></textarea>
               </div>
             </div>
           </div>
@@ -184,7 +184,7 @@
             <div class="card-content">
               <p>Who is your pet's veterinarian (include phone number and address)?</p>
               <div class="input-field col s12">
-                <textarea id="phone vetAddress PetVet" class="materialize-textarea"></textarea>
+                <textarea id="PetVet" class="materialize-textarea"></textarea>
               </div>
             </div>
           </div>
@@ -201,7 +201,7 @@
             <div class="card-content">
               <p>Does your pet take any medication? List it here.</p>
               <div class="input-field col s12">
-                <textarea id="meds PetMeds" class="materialize-textarea"></textarea>
+                <textarea id="PetMeds" class="materialize-textarea"></textarea>
               </div>
             </div>
           </div>
@@ -218,7 +218,7 @@
             <div class="card-content">
               <p>Does your pet require any special treatment or care considerations?</p>
               <div class="input-field col s12">
-                <textarea id="temperament PetCare care" class="materialize-textarea"></textarea>
+                <textarea id="PetCare" class="materialize-textarea"></textarea>
               </div>
             </div>
           </div>
