--- a/public/addother.html
+++ b/public/addother.html
@@ -131,7 +131,7 @@
                     <input id="PetPhoto" type="file" accept="image/*"></input>
                   </div>
                   <div class="file-path-wrapper">
-                    <input class="file-path validate" type="text"></input>
+                    <input id="PetPhotoURL" class="file-path validate" type="text"></input>
                   </div>
                 </div>
 
